--- a/public/pages/contacto.html
+++ b/public/pages/contacto.html
@@ -57,7 +57,7 @@
             <input type="reset" value="Borrar campos" class="btn btn-primary btn-input" disabled id="resetear">
           </div>
 
-          <input type="hidden" name="_next" value="https://master--menumensual.netlify.app/">
+          <input type="hidden" name="_next" value="http://popotropico.alwaysdata.net/">
           <input type="hidden" name="_captcha" value="false">
 
         </form>
