registro de usuarios

--- a/public/pages/config_menu.html
+++ b/public/pages/config_menu.html
@@ -15,41 +15,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
     
-    <title>Login</title>
+    <title>Configura Menus</title>
   </head>
   <body class="container-body">
     <!-- Inicio de NavBar -->
     <header id="header-content"></header>
     <!-- Fin de NavBar -->
 
-    <!-- Inicio del login -->
+    <!-- Inicio del contenido a agregar -->
   
-    <div class="container-login-form">
-      <form action="#" method="POST" id="login-form">
-        <fieldset>
-          <legend><b>Espacio para administradores</b></legend>
-          <br>
-            <input type="text" name= "usuario" id="usuario" placeholder="Ingrese su usuario..." required>
-          <br>
-            <input type="password" name="password" id="password" placeholder="Ingrese su password..." required>
-          <small id="texto-oculto">El correo ingresado no es válido</small>
-        </fieldset>
-        <br>
-        <div class="buttons">
-          <input type="button" value="Login" class="btn btn-primary btn-input" id="login" disabled>
-          <input type="reset" value="Borrar campos" class="btn btn-primary btn-input" id="resetear" disabled>
-        </div>
-      </form>
-  </div>  
+    <h1>CONFIGURANDO MENUS</h1>
+                            <!-- ACA VA EL CONTENIDO NUEVO -->
 
-    <!-- Fin del login -->
+    <!-- Fin del contenido a agregar -->
 
     <!-- Inicio del pie -->
     <footer id="footer-content"></footer>
     <!-- Fin del pie -->
     
     <!-- Inicio de JS -->
-    <script src="../js/script-login.js"></script>
+    <script src="../js/script.js"></script>
     <script src="../js/header.js"></script>
     <script src="../js/menu-hamburguesa.js"></script>
     <!-- Fin de JS -->
